<resources>
    <string name="app_name">CourseApp</string>
    <string name="improve_your_n_educational_experience">Improve Your\n Educational Experience</string>
    <string name="today">Today</string>
    <string name="logo_image">logo_image</string>
    <string name="bottom_left_image">bottom_left_image</string>
    <string name="bottom_left_image1">bottom_left_image</string>
    <string name="top_right_image">top_right_image</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="login">Login</string>
    <string name="popular_courses">Popular Courses</string>
    <string name="pg_program_in_big_n_data_engineering">PG Program in Big\n Data Engineering</string>
    <string name="_182">$182</string>
    <string name="fundamental_of_java_programming">Fundamental of Java Programming</string>
    <string name="_244">$244</string>
    <string name="introduction_to_ui_n_design_history">Introduction to UI\n design history</string>
    <string name="_185">$182</string>
    <string name="fundamental_of_java_n_programming">Fundamental of Java\n Programming</string>
    <string name="_248">$244</string>
    <string name="google_cloud_platform_n_architecture">Google Cloud Platform\n Architecture</string>
    <string name="do_not_have_an_account">Do not have an account ?</string>
    <string name="register2">register</string>
    <string name="email2">Email</string>
    <string name="button">Button</string>
    <string name="todo">TODO</string>
    <string name="advanced_certification_n_program_in_ai">Advanced certification\n Program in AI</string>
    <string name="_224">$224</string>
    <string name="username">Username</string>
    <string name="savidya_jayalath">Savidya Jayalath</string>
    <string name="saviyajayalath_gmail_com">Saviyajayalath@gmail.com</string>
    <string name="savidya_jayalath25">Savidya Jayalath</string>
    <string name="full_name">Full Name</string>
    <string name="email25">Email</string>
    <string name="address">Address</string>
    <string name="password25">Password</string>
    <string name="_3rd_floor_samagam_medusa_400_colombo_07">3rd floor Samagam Medusa 400, Colombo 07</string>
    <string name="password24">*********</string>
    <string name="developing">Developing</string>
    <string name="a_well_designed_course_ensures_that_all_components_are_aligned_with_the_learning_objectives_creating_a_coherent_and_effective_learning_journey">A well-designed course ensures that all components are aligned with the learning objectives, creating a coherent and effective learning journey</string>
    <string name="to_help_you_craft_a_small_course_description_it_would_be_useful_to_know_what_the_course_is_about_could_you_share_the_subject_or_topic_of_the_course_the_target_audience_and_any_key_objectives_or_outcomes">To help you craft a small course description, it would be useful to know what the course is about. Could you share the subject or topic of the course, the target audience, and any key objectives or outcomes</string>
    <string name="this_course_introduces_the_basics_of_artificial_intelligence_ai_and_machine_learning_ml_covering_key_concepts_algorithms_and_practical_applications_students_will_learn_to_build_and_deploy_ml_models_using_popular_tools_preparing_them_to_apply_ai_and_ml_in_real_world_scenarios">This course introduces the basics of Artificial Intelligence (AI) and Machine Learning (ML), covering key concepts, algorithms, and practical applications. Students will learn to build and deploy ML models using popular tools, preparing them to apply AI and ML in real-world scenarios.</string>
    <string name="you_re_all_set">You\'re All Set !</string>
    <string name="you_have_successfully_enrolled_your_course_please_click_on_continue_to_access_your_course">You have successfully enrolled your Course. please click on continue to access your course</string>
    <string name="it_would_be_useful_to_know_what_the_course_is_about_could_you_share_the_subject_or_topic_of_the_course_the_target_audience_and_any_key_objectives_or_outcomes">It_would_be_useful_to_know_what_the_course_is_about_could_you_share_the_subject_or_topic_of_the_course_the_target_audience_and_any_key_objectives_or_outcomes</string>
</resources>